fix modal visible bug

--- a/client/src/components/Modal.css
+++ b/client/src/components/Modal.css
@@ -2,7 +2,8 @@
     z-index: 100;
     height: 100%;
     width: 100%;
-    position: relative;
+    position: fixed;
+    top: 2em;
     display: flex;
     flex-direction: column;
     
